# FeatherFlow

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST_ERD.md  Makefile  README.md  models.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: devcontainer-test.yml  release.yml  rust-ci.yml
demo_project/: ARCHITECTURE.md  DATA_GENERATION_STRATEGY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STEPS.md  README.md  SQL_TRANSFORMATIONS.md  SUMMARY.md  demo_project.mk  featherflow_project.yaml  output_test.yml
demo_project/data/: accounts.csv  customers.csv  merchants.csv  transactions.csv
demo_project/models/imports/: imports.sql  imports.yml
demo_project/models/imports/raw_data/: raw_data.sql  raw_data.yml
demo_project/models/marts/core/: customer_summary.sql  merchant_summary.sql  test.txt
demo_project/models/marts/finance/: daily_trends.sql  (+3 more)
demo_project/models/staging/: stg_accounts.sql  stg_customers.sql  stg_transactions.sql
feather_flow/: Cargo.toml  feather_flow.mk
feather_flow/src/: display.rs  lib.rs  main.rs
feather_flow/src/cli/: cli.rs
feather_flow/src/commands/: cli.rs  config.rs  demo.rs  mod.rs  parse.rs
feather_flow/src/commands/tests/: mod.rs  parse_tests.rs
feather_flow/src/feather_lang/: feather_lang.mk
feather_flow/src/feather_lang/lexer/: lexer.rs
feather_flow/src/feather_lang/repl/: repl.rs
feather_flow/src/feather_lang/token/: token.rs
feather_flow/src/sql_engine/: ast_utils.rs  extractors.rs  lineage.rs  mod.rs  sql_model.rs  tables.rs
feather_flow/src/sql_engine/tests/: external_sources_tests.rs  mod.rs  sql_model_tests.rs
feather_flow/src/validators/: mod.rs
feather_flow/src/validators/tests/: mod.rs
feather_flow/tests/: lineage_integration_test.rs  tables_test.rs
feather_flow/tests/feather_lang/lexer/: lexer_tests.rs
feather_flow/tests/src/: mod.rs
feather_flow/tests/src/feather_lang/: mod.rs
feather_flow/tests/src/feather_lang/lineage/: lineage_tests.rs  mod.rs
feather_flow/tests/src/sql_engine/: ast_utils_tests.rs
models/marts/: customer_orders.sql
models/staging/: stg_customers.sql  stg_orders.sql
prompts/: start_new_llm_session.txt
(+11 files in other folders)
