[package]
name = "feather_flow"
version = "0.1.0"
edition = "2021"


[dependencies]
sqlparser = { version = "0.54.0", features = ["visitor"] }
structopt = "0.3.26"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.3"
anyhow = "1.0"
thiserror = "1.0"

[lib]
name = "feather_flow"
path = "src/lib.rs"

[[bin]]
name = "featherflow"
path = "src/bin/feather_flow.rs"