[package]
name = "feather_flow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
rustyline = "12.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sqlparser = { version = "0.54.0", features = ["visitor"] }
structopt = "0.3"
thiserror = "1.0"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"